--- a/extension.ini
+++ b/extension.ini
@@ -7,5 +7,5 @@ Published: 2019-04-24  15:09:33
 Developer: NoSi.de
 
 system/extensions/ontime.php:ontime,ontime.php,create,update
-system/extensions/ontime.txt:ontime,ontime-de.txt,create,update,careful
+system/extensions/ontime.txt:ontime,ontime.txt,create,update,careful
 content/ontime/page.md: ontime,page.md,create,optional
