--- a/extension.ini
+++ b/extension.ini
@@ -3,7 +3,7 @@
 Extension: OnTime
 Version: 1.2.1
 Description: Displays messages in a time range
-Published: 2019-04-24  15:09:33
+Published: 2020-07-19
 Developer: NoSi.de
 
 system/extensions/ontime.php:ontime,ontime.php,create,update
