Alignment to install changes

--- a/extension.ini
+++ b/extension.ini
@@ -1,17 +1,17 @@
 # Datenstrom Yellow update
 
 Extension: OnTime
-Version: 1.2.3
+Version: 1.2.4
 Description: Displays messages in a date period
 HelpUrl: https://github.com/BsNoSi/yellow-extension-ontime
 DownloadUrl: https://github.com/BsNoSi/yellow-extension-ontime/archive/master.zip
 Status: stable
-Published: 2020-10-17
+Published: 2020-11-21
 Developer: NoSi.de
-Tag: feature, text, content
-system/extensions/ontime.php:ontime,ontime.php,create,update
-system/extensions/ontime.txt:ontime,ontime.txt,create,update
-content/ontime/page.md: ontime,page.md,create,optional
-system/extensions/ontime-de.txt:ontime,ontime-de.txt,delete
-system/extensions/ontime-en.txt:ontime,ontime-en.txt,delete
-system/extensions/ontime-fr.txt:ontime,ontime-fr.txt,delete
+Tag: feature
+system/extensions/ontime.php:ontime.php,create,update
+system/extensions/ontime.txt:ontime.txt,create,update
+content/ontime/page.md:page.md,create,optional
+system/extensions/ontime-de.txt:ontime-de.txt,delete
+system/extensions/ontime-en.txt:ontime-en.txt,delete
+system/extensions/ontime-fr.txt:ontime-fr.txt,delete
